Added steps to ND proofs.